--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <a href="/shapes/cube">Cube</a>
-    <a href="/shapes/spehere">Sphere</a>
+    <a href="/shapes/sphere">Sphere</a>
 </body>
 </html>
