--- a/soundtest.html
+++ b/soundtest.html
@@ -11,7 +11,7 @@
 <body>
 	<h1>WebAudioRecorder.js Demo</h1
 	<div style="max-width: 28em;">
-		<p>File Extension</p>
+		<p>Record Encoding</p>
 		<select id="encodingTypeSelect">
 		  <option value="wav">Waveform (.wav)</option>
 		  <option value="mp3">MP3 (.mp3)</option>
