--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <a href="/shapes/cube">Cube</a>
     <br>
     <a href="/shapes/sphere">Sphere</a>
+    <br>
+    <a href="/shapes/testplot">Test Plot</a>
 </body>
 </html>
