--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Shapes</title>
 </head>
 <body>
-    <a href="/shapes/cube">Cube</a>
+    <a href="/shapes/cube">Cube X</a>
     <br>
-    <a href="/shapes/sphere">Sphere</a>
+    <a href="/shapes/sphere">Sphere X</a>
     <br>
-    <a href="/shapes/testplot">Test Plot</a>
+    <a href="/shapes/cylinder">Cylinder X</a>
+    <br>
+    <a href="/shapes/cone">Cone</a>
 </body>
 </html>
