--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Shapes</title>
 </head>
 <body>
-    <a href="/shapes/cube">Cube X</a>
+    <a href="/shapes/cube">Cube</a>
     <br>
-    <a href="/shapes/sphere">Sphere X</a>
+    <a href="/shapes/sphere">Sphere</a>
     <br>
-    <a href="/shapes/cylinder">Cylinder X</a>
+    <a href="/shapes/cylinder">Cylinder</a>
     <br>
     <a href="/shapes/cone">Cone</a>
 </body>
